# openended-philosophy-mcp

./: .env.example  .gitignore  IMPLEMENTATION_ANALYSIS.md  INTEGRATION_SUMMARY.md  LV_NARS_INTEGRATION_GUIDE.md  README.md  check_ona.py  config.json  demo_nars.py  demo_philosophical_reasoning.py  example_mcp_config.json  philosophy_nars_memory.json  pyproject.toml  requirements.txt  setup.sh  test_enhanced_system_comprehensive.py  test_lv_nars_integration.py  test_nars_integration.py  test_refactoring.py  test_server.py
archive/: enhanced.py.backup  enhanced_part2.py.backup  old_nars_reasoning.py  server.py.backup
docs/: NARS_INSTALLATION.md
examples/: analyze_truth.py  basic_usage.py  test_hypotheses.py
openended_philosophy/: __init__.py  __main__.py  core.py  enhanced_server.py  llm_semantic_processor.py  lv_nars_integration.py  operations.py  operations.py.backup  prompts.py  server.py  utils.py
openended_philosophy/enhanced/: README.md  __init__.py  enhanced_llm_processor.py  enhanced_nars_integration.py  insight_synthesis.py  llm_semantic_processor.py  operations_old.py  recursive_self_analysis.py  recursive_self_analysis_completions.py
openended_philosophy/nars/: __init__.py  nars_manager.py  nars_memory.py  nars_reasoning.py  nars_reasoning_helpers.py  truth_functions.py  types.py
openended_philosophy/semantic/: __init__.py  llm_semantic_processor.py  philosophical_ontology.py  semantic_embedding_space.py  types.py
prompts/: README.md  analyze_concept.md  contextualize_meaning.md  explore_coherence.md  generate_insights.md  nars_philosophy_guide.md  test_philosophical_hypothesis.md
tests/: MISSION_ACCOMPLISHED.md  SUMMARY.md  TOOLS_FIX_SUMMARY.md  __init__.py  demo_nars.py  enhanced_system_test_results_20250628_033045.json  enhanced_system_test_results_20250628_033321.json  enhanced_system_test_results_20250628_050139.json  test_basic.py  test_core.py  test_enhanced_system.py  test_fixed_tools.py  test_mcp_server_final.py  test_methods.py  test_types_refactoring.py
tests/test_implementation/: debug_enhanced_analysis.py  debug_to_dict.py  fix_categorization.py  test_system_status.py
(+2 files in other folders)
